
# plunder (workspace)
[workspace]
members = [
  "crates/*"
, "package"]

[workspace.package]
authors = ["Bhavya Kukkar <bhavyakukkar@gmail.com>"]
categories = ["audio"]
description = "Audio manipulation library and workstation"
edition = "2021"
keywords = ["game", "engine", "gamedev", "geng"]
readme = "README.md"
repository = "https://github.com/bhavyakukkar/plunder"
version = "0.1.0"

[workspace.dependencies]
libplunder = { version = "0.1.0", path = "." }

# Plunder
sampler = { version = "0.1.0", path = "crates/sampler" }
parser1 = { version = "0.1.0", path = "crates/parser1" }
package = { version = "0.1.0", path = "package" }

# Dependencies
anyhow = { version = "1.0.95", features = ["backtrace"] }
mlua = { version = "0.10.2", features = ["lua54", "serialize", "module"] }
serde = { version = "1.0.217", features = ["derive"] }
hound = { version = "3.5.1" }
itertools = "0.14.0"

# libplunder (library)
[package]
name = "libplunder"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
mlua.workspace = true
serde.workspace = true
hound.workspace = true
rustysynth = "1.3.4"
bytemuck = { version = "1.21.0", features = ["must_cast"] }
itertools.workspace = true
