
[workspace]
members = ["crates/*"]


[workspace.package]
authors = ["Bhavya Kukkar <bhavyakukkar@gmail.com>"]
categories = ["audio"]
description = "Audio manipulation library and workstation"
edition = "2021"
keywords = ["game", "engine", "gamedev", "geng"]
readme = "README.md"
repository = "https://github.com/bhavyakukkar/plunder"
version = "0.1.0"


[workspace.dependencies]
# Plunder Core
libplunder = { version = "0.1.0", path = "crates/libplunder" }

# Plunder Packages
sampler = { version = "0.1.0", path = "crates/sampler" }
parser1 = { version = "0.1.0", path = "crates/parser1" }

# Dependencies
anyhow = { version = "1.0.95", features = ["backtrace"] }
mlua = { version = "0.10.2", features = ["lua54", "serialize", "module"] }
serde = { version = "1.0.217", features = ["derive"] }
hound = { version = "3.5.1" }
itertools = "0.14.0"


# Plunder package includes engine + sampler + parser1
[package]
name = "plunder"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
mlua.workspace = true
hound.workspace = true
anyhow.workspace = true

libplunder.workspace = true
sampler.workspace = true
parser1.workspace = true

[lib]
crate-type = ["cdylib"]
