
[workspace]
members = ["crates/*"]


[workspace.package]
authors = ["Bhavya Kukkar <bhavyakukkar@gmail.com>"]
categories = ["audio"]
description = "Audio manipulation library and workstation"
edition = "2021"
keywords = ["game", "engine", "gamedev", "geng"]
readme = "README.md"
repository = "https://github.com/bhavyakukkar/plunder"
version = "0.1.0"


[workspace.dependencies]
# Plunder Core
libplunder = { version = "0.1.0", path = "crates/libplunder" }

# Plunder Packages
sampler = { version = "0.1.0", path = "crates/sampler" }
parser1 = { version = "0.1.0", path = "crates/parser1" }
midi = { version = "0.1.0", path = "crates/midi"}

# Dependencies
anyhow = { version = "1.0.95", features = ["backtrace"] }
mlua = { version = "0.10.2", features = ["lua54", "serialize", "module"] }
serde = { version = "1.0.217", features = ["derive"] }
hound = { version = "3.5.1" }
itertools = "0.14.0"
env_logger = "0.11.6"
log = "0.4.25"

# Plunder package includes engine + sampler + parser1
[package]
name = "plunder"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
libplunder.workspace = true
sampler.workspace = true
parser1.workspace = true
midi.workspace = true

mlua.workspace = true
hound.workspace = true
anyhow.workspace = true
env_logger.workspace = true
itertools.workspace = true
log.workspace = true

[lib]
crate-type = ["cdylib"]
