[package]
name = "libplunder"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
mlua.workspace = true
serde.workspace = true
env_logger.workspace = true
log.workspace = true
