[package]
name = "midi"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
libplunder.workspace = true
anyhow.workspace = true
serde.workspace = true
log.workspace = true
mlua.workspace = true
rustysynth = "1.3.5"
